secp256k1-zkp-sys/depend/secp256k1-zkp/include/secp256k1.h


typedef struct secp256k1_zkp_context_struct secp256k1_zkp_context;
typedef struct secp256k1_zkp_scratch_space_struct secp256k1_zkp_scratch_space;
typedef struct {
    unsigned char data[64];
} secp256k1_zkp_pubkey;
typedef int (*secp256k1_zkp_nonce_function)(
    unsigned char *nonce32,
    const unsigned char *msg32,
    const unsigned char *key32,
    const unsigned char *algo16,
    void *data,
    unsigned int attempt
);
#define SECP256K1_EC_COMPRESSED (SECP256K1_FLAGS_TYPE_COMPRESSION | SECP256K1_FLAGS_BIT_COMPRESSION)
#define SECP256K1_EC_UNCOMPRESSED (SECP256K1_FLAGS_TYPE_COMPRESSION)
SECP256K1_API extern const secp256k1_zkp_context *secp256k1_zkp_context_no_precomp;
SECP256K1_API secp256k1_zkp_context* secp256k1_zkp_context_create(
    unsigned int flags
) SECP256K1_WARN_UNUSED_RESULT;
SECP256K1_API secp256k1_zkp_context* secp256k1_zkp_context_clone(
    const secp256k1_zkp_context* ctx
) SECP256K1_ARG_NONNULL(1) SECP256K1_WARN_UNUSED_RESULT;
SECP256K1_API void secp256k1_zkp_context_destroy(
    secp256k1_zkp_context* ctx
);
SECP256K1_API void secp256k1_zkp_context_set_illegal_callback(
    secp256k1_zkp_context* ctx,
    void (*fun)(const char* message, void* data),
    const void* data
) SECP256K1_ARG_NONNULL(1);
SECP256K1_API void secp256k1_zkp_context_set_error_callback(
    secp256k1_zkp_context* ctx,
    void (*fun)(const char* message, void* data),
    const void* data
) SECP256K1_ARG_NONNULL(1);
SECP256K1_API SECP256K1_WARN_UNUSED_RESULT secp256k1_zkp_scratch_space* secp256k1_zkp_scratch_space_create(
    const secp256k1_zkp_context* ctx,
    size_t size
) SECP256K1_ARG_NONNULL(1);
SECP256K1_API void secp256k1_zkp_scratch_space_destroy(
    const secp256k1_zkp_context* ctx,
    secp256k1_zkp_scratch_space* scratch
) SECP256K1_ARG_NONNULL(1);
SECP256K1_API SECP256K1_WARN_UNUSED_RESULT int secp256k1_zkp_ec_pubkey_parse(
    const secp256k1_zkp_context* ctx,
    secp256k1_zkp_pubkey* pubkey,
    const unsigned char *input,
    size_t inputlen
) SECP256K1_ARG_NONNULL(1) SECP256K1_ARG_NONNULL(2) SECP256K1_ARG_NONNULL(3);
SECP256K1_API int secp256k1_zkp_ec_pubkey_serialize(
    const secp256k1_zkp_context* ctx,
    unsigned char *output,
    size_t *outputlen,
    const secp256k1_zkp_pubkey* pubkey,
    unsigned int flags
) SECP256K1_ARG_NONNULL(1) SECP256K1_ARG_NONNULL(2) SECP256K1_ARG_NONNULL(3) SECP256K1_ARG_NONNULL(4);
SECP256K1_API SECP256K1_WARN_UNUSED_RESULT int secp256k1_zkp_context_randomize(
    secp256k1_zkp_context* ctx,
    const unsigned char *seed32
) SECP256K1_ARG_NONNULL(1);