secp256k1-zkp-sys/secp_bindings.rs

#[doc = " A pointer to a function to deterministically generate a nonce."]
#[doc = ""]
#[doc = " Returns: 1 if a nonce was successfully generated. 0 will cause signing to fail."]
#[doc = " Out:     nonce32:   pointer to a 32-byte array to be filled by the function."]
#[doc = " In:      msg32:     the 32-byte message hash being verified (will not be NULL)"]
#[doc = "          key32:     pointer to a 32-byte secret key (will not be NULL)"]
#[doc = "          algo16:    pointer to a 16-byte array describing the signature"]
#[doc = "                     algorithm (will be NULL for ECDSA for compatibility)."]
#[doc = "          data:      Arbitrary data pointer that is passed through."]
#[doc = "          attempt:   how many iterations we have tried to find a nonce."]
#[doc = "                     This will almost always be 0, but different attempt values"]
#[doc = "                     are required to result in a different nonce."]
#[doc = ""]
#[doc = " Except for test cases, this function should compute some cryptographic hash of"]
#[doc = " the message, the algorithm, the key and the attempt."]
pub type secp256k1_zkp_nonce_function = ::std::option::Option<
    unsafe extern "C" fn(
        nonce32: *mut ::std::os::raw::c_uchar,
        msg32: *const ::std::os::raw::c_uchar,
        key32: *const ::std::os::raw::c_uchar,
        algo16: *const ::std::os::raw::c_uchar,
        data: *mut ::std::os::raw::c_void,
        attempt: ::std::os::raw::c_uint,
    ) -> ::std::os::raw::c_int,
>;
extern "C" {
    pub static mut secp256k1_zkp_context_no_precomp: *const secp256k1_zkp_context;
}
extern "C" {
    #[doc = " Create a secp256k1 context object (in dynamically allocated memory)."]
    #[doc = ""]
    #[doc = "  This function uses malloc to allocate memory. It is guaranteed that malloc is"]
    #[doc = "  called at most once for every call of this function. If you need to avoid dynamic"]
    #[doc = "  memory allocation entirely, see the functions in secp256k1_zkp_preallocated.h."]
    #[doc = ""]
    #[doc = "  Returns: a newly created context object."]
    #[doc = "  In:      flags: which parts of the context to initialize."]
    #[doc = ""]
    #[doc = "  See also secp256k1_zkp_context_randomize."]
    pub fn secp256k1_zkp_context_create(
        flags: ::std::os::raw::c_uint,
    ) -> *mut secp256k1_zkp_context;
}
extern "C" {
    #[doc = " Copy a secp256k1 context object (into dynamically allocated memory)."]
    #[doc = ""]
    #[doc = "  This function uses malloc to allocate memory. It is guaranteed that malloc is"]
    #[doc = "  called at most once for every call of this function. If you need to avoid dynamic"]
    #[doc = "  memory allocation entirely, see the functions in secp256k1_zkp_preallocated.h."]
    #[doc = ""]
    #[doc = "  Returns: a newly created context object."]
    #[doc = "  Args:    ctx: an existing context to copy (cannot be NULL)"]
    pub fn secp256k1_zkp_context_clone(
        ctx: *const secp256k1_zkp_context,
    ) -> *mut secp256k1_zkp_context;
}
extern "C" {
    #[doc = " Destroy a secp256k1 context object (created in dynamically allocated memory)."]
    #[doc = ""]
    #[doc = "  The context pointer may not be used afterwards."]
    #[doc = ""]
    #[doc = "  The context to destroy must have been created using secp256k1_zkp_context_create"]
    #[doc = "  or secp256k1_zkp_context_clone. If the context has instead been created using"]
    #[doc = "  secp256k1_zkp_context_preallocated_create or secp256k1_zkp_context_preallocated_clone, the"]
    #[doc = "  behaviour is undefined. In that case, secp256k1_zkp_context_preallocated_destroy must"]
    #[doc = "  be used instead."]
    #[doc = ""]
    #[doc = "  Args:   ctx: an existing context to destroy, constructed using"]
    #[doc = "               secp256k1_zkp_context_create or secp256k1_zkp_context_clone"]
    pub fn secp256k1_zkp_context_destroy(ctx: *mut secp256k1_zkp_context);
}
extern "C" {
    #[doc = " Set a callback function to be called when an illegal argument is passed to"]
    #[doc = "  an API call. It will only trigger for violations that are mentioned"]
    #[doc = "  explicitly in the header."]
    #[doc = ""]
    #[doc = "  The philosophy is that these shouldn't be dealt with through a"]
    #[doc = "  specific return value, as calling code should not have branches to deal with"]
    #[doc = "  the case that this code itself is broken."]
    #[doc = ""]
    #[doc = "  On the other hand, during debug stage, one would want to be informed about"]
    #[doc = "  such mistakes, and the default (crashing) may be inadvisable."]
    #[doc = "  When this callback is triggered, the API function called is guaranteed not"]
    #[doc = "  to cause a crash, though its return value and output arguments are"]
    #[doc = "  undefined."]
    #[doc = ""]
    #[doc = "  When this function has not been called (or called with fn==NULL), then the"]
    #[doc = "  default handler will be used.\u{a0}The library provides a default handler which"]
    #[doc = "  writes the message to stderr and calls abort. This default handler can be"]
    #[doc = "  replaced at link time if the preprocessor macro"]
    #[doc = "  USE_EXTERNAL_DEFAULT_CALLBACKS is defined, which is the case if the build"]
    #[doc = "  has been configured with --enable-external-default-callbacks. Then the"]
    #[doc = "  following two symbols must be provided to link against:"]
    #[doc = "   - void secp256k1_zkp_default_illegal_callback_fn(const char* message, void* data);"]
    #[doc = "   - void secp256k1_zkp_default_error_callback_fn(const char* message, void* data);"]
    #[doc = "  The library can call these default handlers even before a proper callback data"]
    #[doc = "  pointer could have been set using secp256k1_zkp_context_set_illegal_callback or"]
    #[doc = "  secp256k1_zkp_context_set_error_callback, e.g., when the creation of a context"]
    #[doc = "  fails. In this case, the corresponding default handler will be called with"]
    #[doc = "  the data pointer argument set to NULL."]
    #[doc = ""]
    #[doc = "  Args: ctx:  an existing context object (cannot be NULL)"]
    #[doc = "  In:   fun:  a pointer to a function to call when an illegal argument is"]
    #[doc = "              passed to the API, taking a message and an opaque pointer."]
    #[doc = "              (NULL restores the default handler.)"]
    #[doc = "        data: the opaque pointer to pass to fun above."]
    #[doc = ""]
    #[doc = "  See also secp256k1_zkp_context_set_error_callback."]
    pub fn secp256k1_zkp_context_set_illegal_callback(
        ctx: *mut secp256k1_zkp_context,
        fun: ::std::option::Option<
            unsafe extern "C" fn(
                message: *const ::std::os::raw::c_char,
                data: *mut ::std::os::raw::c_void,
            ),
        >,
        data: *const ::std::os::raw::c_void,
    );
}
extern "C" {
    #[doc = " Set a callback function to be called when an internal consistency check"]
    #[doc = "  fails. The default is crashing."]
    #[doc = ""]
    #[doc = "  This can only trigger in case of a hardware failure, miscompilation,"]
    #[doc = "  memory corruption, serious bug in the library, or other error would can"]
    #[doc = "  otherwise result in undefined behaviour. It will not trigger due to mere"]
    #[doc = "  incorrect usage of the API (see secp256k1_zkp_context_set_illegal_callback"]
    #[doc = "  for that). After this callback returns, anything may happen, including"]
    #[doc = "  crashing."]
    #[doc = ""]
    #[doc = "  Args: ctx:  an existing context object (cannot be NULL)"]
    #[doc = "  In:   fun:  a pointer to a function to call when an internal error occurs,"]
    #[doc = "              taking a message and an opaque pointer (NULL restores the"]
    #[doc = "              default handler, see secp256k1_zkp_context_set_illegal_callback"]
    #[doc = "              for details)."]
    #[doc = "        data: the opaque pointer to pass to fun above."]
    #[doc = ""]
    #[doc = "  See also secp256k1_zkp_context_set_illegal_callback."]
    pub fn secp256k1_zkp_context_set_error_callback(
        ctx: *mut secp256k1_zkp_context,
        fun: ::std::option::Option<
            unsafe extern "C" fn(
                message: *const ::std::os::raw::c_char,
                data: *mut ::std::os::raw::c_void,
            ),
        >,
        data: *const ::std::os::raw::c_void,
    );
}
extern "C" {
    #[doc = " Create a secp256k1 scratch space object."]
    #[doc = ""]
    #[doc = "  Returns: a newly created scratch space."]
    #[doc = "  Args: ctx:  an existing context object (cannot be NULL)"]
    #[doc = "  In:   size: amount of memory to be available as scratch space. Some extra"]
    #[doc = "              (<100 bytes) will be allocated for extra accounting."]
    pub fn secp256k1_zkp_scratch_space_create(
        ctx: *const secp256k1_zkp_context,
        size: size_t,
    ) -> *mut secp256k1_zkp_scratch_space;
}
extern "C" {
    #[doc = " Destroy a secp256k1 scratch space."]
    #[doc = ""]
    #[doc = "  The pointer may not be used afterwards."]
    #[doc = "  Args:       ctx: a secp256k1 context object."]
    #[doc = "          scratch: space to destroy"]
    pub fn secp256k1_zkp_scratch_space_destroy(
        ctx: *const secp256k1_zkp_context,
        scratch: *mut secp256k1_zkp_scratch_space,
    );
}
extern "C" {
    #[doc = " Parse a variable-length public key into the pubkey object."]
    #[doc = ""]
    #[doc = "  Returns: 1 if the public key was fully valid."]
    #[doc = "           0 if the public key could not be parsed or is invalid."]
    #[doc = "  Args: ctx:      a secp256k1 context object."]
    #[doc = "  Out:  pubkey:   pointer to a pubkey object. If 1 is returned, it is set to a"]
    #[doc = "                  parsed version of input. If not, its value is undefined."]
    #[doc = "  In:   input:    pointer to a serialized public key"]
    #[doc = "        inputlen: length of the array pointed to by input"]
    #[doc = ""]
    #[doc = "  This function supports parsing compressed (33 bytes, header byte 0x02 or"]
    #[doc = "  0x03), uncompressed (65 bytes, header byte 0x04), or hybrid (65 bytes, header"]
    #[doc = "  byte 0x06 or 0x07) format public keys."]
    pub fn secp256k1_zkp_ec_pubkey_parse(
        ctx: *const secp256k1_zkp_context,
        pubkey: *mut secp256k1_zkp_pubkey,
        input: *const ::std::os::raw::c_uchar,
        inputlen: size_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Serialize a pubkey object into a serialized byte sequence."]
    #[doc = ""]
    #[doc = "  Returns: 1 always."]
    #[doc = "  Args:   ctx:        a secp256k1 context object."]
    #[doc = "  Out:    output:     a pointer to a 65-byte (if compressed==0) or 33-byte (if"]
    #[doc = "                      compressed==1) byte array to place the serialized key"]
    #[doc = "                      in."]
    #[doc = "  In/Out: outputlen:  a pointer to an integer which is initially set to the"]
    #[doc = "                      size of output, and is overwritten with the written"]
    #[doc = "                      size."]
    #[doc = "  In:     pubkey:     a pointer to a secp256k1_zkp_pubkey containing an"]
    #[doc = "                      initialized public key."]
    #[doc = "          flags:      SECP256K1_EC_COMPRESSED if serialization should be in"]
    #[doc = "                      compressed format, otherwise SECP256K1_EC_UNCOMPRESSED."]
    pub fn secp256k1_zkp_ec_pubkey_serialize(
        ctx: *const secp256k1_zkp_context,
        output: *mut ::std::os::raw::c_uchar,
        outputlen: *mut size_t,
        pubkey: *const secp256k1_zkp_pubkey,
        flags: ::std::os::raw::c_uint,
    ) -> ::std::os::raw::c_int;
}
